[project]
name = "devops-aws-glue-py-utils"
version = "0.1.0"
description = "A private python library of utility functions for AWS Glue ETL Jobs."
readme = "README.md"
authors = [
    { name = "Chad Wood", email = "cwood@vbg.com" }
]
requires-python = ">=3.4"
dependencies = ["toml==0.10.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
